@@ -1,8 +1,8 @@
 Package: anytime
 Type: Package
 Title: Anything to 'POSIXct' or 'Date' Converter
-Version: 0.3.4.4
-Date: 2019-07-16
+Version: 0.3.4.5
+Date: 2019-07-20
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Convert input in any one of character, integer, numeric, factor,
@@ -13,7 +13,7 @@ BugReports: https://github.com/eddelbuettel/anytime/issues
 License: GPL (>= 2)
 Encoding: UTF-8
 Depends: R (>= 3.2.0)
-Imports: Rcpp (>= 0.12.9), RApiDatetime
-LinkingTo: Rcpp (>= 0.12.9), BH, RApiDatetime
+Imports: Rcpp (>= 0.12.9)
+LinkingTo: Rcpp (>= 0.12.9), BH
 Suggests: tinytest, gettz
 RoxygenNote: 6.0.1
